[package]
name = "sol-did"
version = "0.2.0"
description = "Solana Decentralized ID Program"
authors = ["Solana Maintainers <maintainers@solana.foundation>, Identity.com <daniel@identity.com>"]
repository = "https://github.com/identity-com/sol-did"
license = "MIT"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.6.8"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.5.10"
solana-sdk = "1.5.10"
# These are older as solana sdk relies on rand_core 0.5.1
rand = "0.7.3"
rand_chacha = "0.2.2"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
