[package]
name = "sol-did"
version = "3.2.0"
description = "Martin Riedel"
edition = "2021"
readme = "../../README.md"
homepage = "https://www.identity.com/"
repository = "https://github.com/identity-com/sol-did"
license = "MIT"
keywords = ["did", "solana", "identity", "did-method"]

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_did"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
bitflags = "1.3.2"
borsh = "0.9.3"
itertools = "0.10.3"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.14.11"
solana-security-txt = "1.1.0"
